--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,3 +1,12 @@
 {
-  "extends": "astro/tsconfigs/strict"
+  "extends": "astro/tsconfigs/strict",
+  "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "$logic/*": ["./src/logic/*"],
+      "$util/*": ["./src/logic/util/*"],
+      "$api/*": ["./src/logic/api/*"],
+      "$cards/*": ["./src/components/cards/*"],
+    }
+  }
 }
