--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@astrojs/svelte": "^6.0.2",
     "@astrojs/tailwind": "^5.1.2",
     "astro": "^4.16.14",
+    "jwt-decode": "^4.0.0",
     "prettier": "^3.3.3",
     "prettier-plugin-astro": "^0.14.1",
     "prettier-plugin-svelte": "^3.3.2",
